@@ -1,3 +1,8 @@
+2007-12-03  Donal K. Fellows  <dkf@users.sf.net>
+
+	* unix/tclUnixChan.c (CreateSocketAddress): Add extra #ifdef-fery to
+	make code compile on BSD 5. [Bug 1618235, again]
+
 2007-12-03  Don Porter	<dgp@users.sourceforge.net>
 
 	* library/tcltest/tcltest.tcl:	Bump tcltest to version 2.3.0 so that
